[package]
name = "marketplace"
version = "0.0.0"
edition = "2021"

[dependencies.multiversx-sc]
version = "=0.64.1"  # Match CLI version

[dev-dependencies.multiversx-sc-scenario]
version = "=0.64.1"

[workspace]
members = [".", "meta"]
resolver = "2"

[workspace.dependencies.multiversx-sc]
version = "=0.64.1"
